Twenty Fourteen: match `screen-reader-text` accessibility styles a bit better with core, to avoid a jump when you move through the links, and to avoid a horizontal scroll at certain viewport widths. Also fix JS focus by specifying the first match object. Closes #25592. Built from https://develop.svn.wordpress.org/trunk@26843
git-svn-id: http://core.svn.wordpress.org/trunk@26730 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/rtl.css
+++ b/wp-content/themes/twentyfourteen/rtl.css
@@ -98,8 +98,8 @@ td {
 }
 
 .search-toggle .screen-reader-text {
-	right: auto;
-	left: 0;
+	right: 5px; /* Avoid a horizontal scrollbar when the site has a long menu */
+	left: auto;
 }
 
 
